# esp32s3-gc9a01-lvgl

SQUARE/: tqt128.sll  tqt128.spj
main/: CMakeLists.txt  idf_component.yml  main.c  main.h
main/display/: CMakeLists.txt  display.c  display.h  filelist.txt  gc9a01.c  gc9a01.h  ui.c  ui.h  ui.h.bak  ui_Screen1.c  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_img_autos_png.c
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_my_128_png.c  ui_img_wifi3_png.c
